<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.agsva_000.proyectointegrador2dam.MainActivity$PlaceholderFragment">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etOrigen"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/origen"
        android:textSize="23sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etDestino"
        android:hint="@string/destino"
        android:layout_below="@+id/etOrigen"
        android:layout_marginTop="5dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="23sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etFecha"
        android:hint="@string/fecha"
        android:textSize="23sp"
        android:layout_below="@+id/etDestino"
        android:layout_marginTop="5dp"
        android:inputType="date"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etHora"
        android:hint="@string/hora"
        android:textSize="23sp"
        android:layout_below="@+id/etFecha"
        android:inputType="time"
        android:layout_marginTop="5dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPrecio"
        android:hint="@string/precio"
        android:textSize="23sp"
        android:layout_below="@+id/etHora"
        android:inputType="numberDecimal"
        android:layout_marginTop="5dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publicarViaje"
        android:id="@+id/botonPublicarViaje"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:layout_marginBottom="50dp"/>

</RelativeLayout>
