<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:background="@drawable/background_fill">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/textViewTitulo"
        android:layout_marginTop="30dp"
        android:textSize="60sp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/textViewSubTitulo"
        android:layout_below="@+id/textViewTitulo"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:text="@string/textViewSubTitulo"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEntrar"
        android:layout_marginTop="200dp"
        android:hint="@string/nombre"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="19sp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etContraseña"
        android:layout_below="@+id/etEntrar"
        android:layout_marginTop="00dp"
        android:hint="@string/contraseña"
        android:layout_centerHorizontal="true"
        android:textSize="19sp"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/botonEntrar"
        android:text="@string/entrar"
        android:textSize="20sp"
        android:layout_below="@+id/etContraseña"
        android:layout_marginTop="00dp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:background="#A0FFFFFF"/>

    <Button
        android:id="@+id/botonRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrar"
        android:textSize="20sp"
        android:layout_below="@+id/botonEntrar"
        android:layout_marginTop="11dp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:background="#A0FFFFFF"/>

</RelativeLayout>
