<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegistrarActivity"
    android:background="@drawable/background_fill" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/textViewTitulo"
        android:layout_marginTop="30dp"
        android:textSize="60sp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/textViewSubTitulo2"
        android:layout_below="@+id/textViewTitulo"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:text="@string/textViewSubTitulo2"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etRegNombre"
        android:layout_marginTop="170dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/RegNombre"
        android:textSize="19sp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etRegContraseña"
        android:layout_below="@+id/etRegNombre"
        android:layout_marginTop="00dp"
        android:hint="@string/RegContraseña"
        android:layout_centerHorizontal="true"
        android:textSize="19sp"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etRegRepetirCon"
        android:hint="@string/RegContraseña2"
        android:layout_below="@+id/etRegContraseña"
        android:layout_marginTop="00dp"
        android:layout_centerHorizontal="true"
        android:textSize="19sp"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/botonRegistrar"
        android:layout_below="@+id/etRegRepetirCon"
        android:layout_marginTop="00dp"
        android:layout_centerHorizontal="true"
        android:text="@string/registrar"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:background="#A0FFFFFF" />
</RelativeLayout>
